landed flight working
